Fix font cutoff

--- a/cigionline/static/css/components/SearchTable.scss
+++ b/cigionline/static/css/components/SearchTable.scss
@@ -211,7 +211,7 @@
 
       .input-group-search {
         &.large {
-          height: 2em;
+          height: 2.2em;
 
           input {
             color: $color--blue;
